# clay

./: .gitignore  .hgignore  AUTHORS.txt  CMakeLists.txt  ChangeLog.txt  LICENSE.txt  Makefile  Makefile.inc  Makefile.new  Plan.txt  README.md  README.txt  ReleaseNotes.txt  clay.py  clayc  clayc-new  foo  index.html  langdef.txt  lexer.py  paintrain.clay  paintrain_call.clay  prelude.clay  premake4.lua  pyclayc  run.py  runpylint.sh  runtests.py  stub.c  syntax.txt  test.clay  test2.clay
bindgen/: .hgignore  Makefile  constgen.py
bindgen/include/: BindingsConverter.h
bindgen/src/: BindingsConverter.cpp  InitHeaderSearch.cpp  clay-bindgen.cpp
bindgen/vs2008/: clay-bindgen.vcproj
bugs/: aliaslambda.clay
clay/: analyzer.py  ast.py  astprinter.py  codegen.py  compiler.py  coreops.py  env.py  error.py  evaluator.py  lexer.py  linecol.py  llvmwrapper.py  location.py  machineops.py  main.py  metaops.py  multimethod.py  parser.py  parserlib.py  tokens.py  types.py  unify.py  values.py  xprint.py
clay-dbg/include/: Shell.h  ShellConsumer.h
clay-dbg/src/: ShellConsumer.cpp  clay-dbg.cpp
cmake/: FindMercurial.cmake  PCHsupport.cmake
compiler/: CMakeLists.txt  Makefile  analyzer.cpp  analyzer.hpp  analyzer_op.cpp  analyzer_op.hpp  checkedcast.hpp  clay.cpp  clay.hpp  clayc  claydoc.cpp  claydoc.hpp  clone.cpp  clone.hpp  codegen.cpp  codegen.hpp  codegen_op.cpp  codegen_op.hpp  constructors.cpp  constructors.hpp  desugar.cpp  desugar.hpp  env.cpp  env.hpp  error.cpp  error.hpp  evaluator.cpp  evaluator.hpp  evaluator_op.cpp  evaluator_op.hpp  externals.cpp  externals.hpp  hirestimer.cpp  hirestimer.hpp  html.cpp  int128.hpp  interactive.cpp  invoketables.cpp  invoketables.hpp  lambdas.cpp  (+29 more)
compiler-py/: Makefile
compiler-py-new/: pylint.sh
compiler-py-new/clay/: ast.py  astprinter.py  core.py  env.py  evaluator.py  lexer.py  main.py  parser.py  primitives.py  xprint.py
compiler-py/clay/: analyzer.py  ast.py  astprinter.py  cleanup.py  compiler.py  core.py  coreops.py  env.py  evaluator.py  lexer.py  llvmwrapper.py  machineops.py  main.py  multimethod.py  parser.py  primitives.py  stub.c  tokens.py  types.py  unifier.py  unify.py
compiler-py/machineops/: machineops.cpp
compiler/src/: CMakeLists.txt  Makefile  analyzer.cpp  analyzer2.cpp  analyzer_old.cpp  clay.cpp  clay.hpp  claydoc.hpp  clone.cpp  codegen.cpp  codegen_old.cpp  constructors.cpp  desugar.cpp  env.cpp  error.cpp  evaluator.cpp  evaluator2.cpp  evaluator_old.cpp  externals.cpp  hirestimer.cpp  hirestimer.hpp  interactive.cpp  invoketables.cpp  lambdas.cpp  lexer.cpp  libclaynames.hpp  literals.cpp  llvm.cpp  loader.cpp  main.cpp  matchinvoke.cpp  objects.cpp  operators.hpp  parachute.cpp  parser.cpp  patterns.cpp  pch.cpp  printer.cpp  profiler.cpp  profiler.hpp  (+3 more)
compiler/src/v0.1/: parser.cpp
compiler/v0.1/: lexer.cpp
compiler/vs2008/: clay.sln  clay.vcproj
dbg/: Makefile
dbg/src/: Shell.cpp  clay-dbg.cpp
doc/: features.txt  language-reference.md  notes.txt  primitives-new.txt  primitives-reference.md  primitives.txt  syntax.txt  wishlist.txt
editor-support/: SyntaxHighlightingExample.clay
editor-support/emacs/: README.txt  clay-mode.el
editor-support/gtksourceview/: clay.lang
editor-support/vim/: README.txt
evaluator-cpp/: clay.hpp  env.cpp  error.cpp  evaluator.cpp  lexer.cpp  loader.cpp  main.cpp  parser.cpp  printer.cpp  source.cpp  types.cpp  util.cpp
evaluator-py/clay/: ast.py  core.py  env.py  error.py  evaluator.py  lexer.py  main.py  multimethod.py  primitives.py  tokens.py  unifier.py
examples/: factorial.clay  hello.clay  libchello.clay  tinyhello.clay
examples/opengl/: clear-context-static.clay  clear-context.clay  clear-static.clay  clear.clay
examples/win32/: wndproc.clay
lib-clay/: _array.clay  _bool.clay  _char.clay  _compilerobject.clay  _coordinate.clay  _core.clay  _move.clay  _numeric.clay  _pointer.clay  _range.clay  _record.clay  _string.clay  _tuple.clay  _tuplerecord.clay  _util.clay  _vector.clay  base.clay  libc.clay
lib-clay/abstractvectors/: abstractvectors.clay
lib-clay/algorithms/: algorithms.clay
lib-clay/any/: any.clay
lib-clay/arrays/: arrays.clay
lib-clay/assert/: assert.clay
machineops/: Makefile  machineops.cpp
metaclay/: test.metaclay  testevaluator.clay  testlexer.clay  testloader.clay  testparser.clay
misc/: CMakeLists.txt
misc/bindgen/src/: BindingsConverter.cpp  CMakeLists.txt  InitHeaderSearch.cpp  clay-bindgen.cpp
newclay/: Makefile  test.sh  testanalysis.clay  testanalyzer.clay  testcache.clay  testcodegen.clay  testcodegen_c.clay  testcompiler.clay  testevaluator.clay  testlexer.clay  testlifetime.clay  testloader.clay  testparser.clay  testresolver.clay
src/: analyzer.cpp  clay.hpp  clone.cpp  codegen.cpp  common.hpp  constructors.cpp  desugar.cpp  env.cpp  error.cpp  evaluator.cpp  invoketable.hpp  invoketables.cpp  invokeutil.hpp  invokeutil2.cpp  invokeutil2.hpp  lambdas.cpp  lexer.cpp  loader.cpp  main.cpp  matchinvoke.cpp  parser.cpp  partialeval.cpp  patterns.cpp  printer.cpp  types.cpp
src-new/: analyzer.cpp  clay.hpp  codegen.cpp  desugar.cpp  error.cpp  evaluator.cpp  invoketables.cpp  lexer.cpp  llvm.cpp  loader.cpp  main.cpp  matchinvoke.cpp  patterns.cpp  types.cpp
test/: Makefile  calculator.clay  cmdline.clay  config.py  dlltest.clay  exception.clay  factorial.clay  hello.clay  insertionsort.clay  insertionsort1.clay  insertionsort1.cpp  insertionsort2.clay  insertionsort3.clay  libchello.clay  mean.clay  mean.go  platform.clay  qsort.clay  quicksort.go  random.clay  runtests.py  sieve.clay  syntaxhighlighting.clay  test-installation.py  test1.clay  test1.py  test10.clay  test11.clay  test12.clay  test13.clay  test14.clay  test15.clay  test16.clay  test17.clay  test18.clay  test19.clay  test2.clay  test20.clay  test21.clay  test22.clay  (+27 more)
threads-rt/: proc.c  proc.h
tools/: CMakeLists.txt  bindgen.clay  can-build-bindgen.sh  clayfix.clay  fix.clay  foo.h  libclang.diff
tools/claydoc/: CMakeLists.txt  html.cpp  main.cpp
tools/clayfix/: v0_0.clay
tools/fix/: v0_0.clay
(+3982 files in other folders)
